# souppot

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml  test.yml
docs/: api.rst  conf.py  index.md  usage.md
src/souppot/: __init__.py  core.py
tests/: test_core.py
tests/fixtures/: basic.html
tests/functional/: test_functional.py
tests/functional/fixtures/: page.html
