[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "souppot"
version = "0.1.0"
description = "Small helpers for fetching and parsing HTML with requests or Playwright."
readme = "README.md"
license = "MIT"
authors = [
  { name = "octanima-labs", email = "octanima@tuta.io" },
]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "beautifulsoup4",
  "requests",
  "playwright",
  "2ning",
]

[project.urls]
Repository = "https://github.com/octanima-labs/souppot"
Documentation = "https://octanima-labs.github.io/souppot/"
Issues = "https://github.com/octanima-labs/souppot/issues"

[dependency-groups]
dev = [
  "build",
  "mypy",
  "pytest",
  "ruff",
]
docs = [
  "myst-parser",
  "pydata-sphinx-theme",
  "sphinx",
  "sphinx-autodoc-typehints",
]

[tool.ruff]
target-version = "py311"

[tool.mypy]
python_version = "3.11"

[[tool.mypy.overrides]]
module = ["tuning"]
ignore_missing_imports = true

[tool.hatch.envs.default]
dependencies = [
  "build",
  "mypy",
  "pytest",
  "ruff",
]

[tool.hatch.envs.docs]
dependencies = [
  "myst-parser",
  "pydata-sphinx-theme",
  "sphinx",
  "sphinx-autodoc-typehints",
]

[tool.hatch.envs.docs.scripts]
build = "sphinx-build -W -b html docs docs/_build/html"

[tool.hatch.build.targets.wheel]
packages = ["src/souppot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "functional: local HTTP server tests that exercise real requests and Playwright paths",
]
